# opcua

./: .env.example  .gitignore  pyproject.toml
backend/: HELP.md  build.gradle.kts  settings.gradle.kts
backend/src/main/kotlin/com/gaon/opcua/: OpcuaApplication.kt
backend/src/main/kotlin/com/gaon/opcua/config/: swaggerConfig.kt
backend/src/main/kotlin/com/gaon/opcua/controller/: AirConditionerController.kt
backend/src/main/kotlin/com/gaon/opcua/dto/: AirConditionerStatusDto.kt  TemperatureUpdateDto.kt
backend/src/test/kotlin/com/gaon/opcua/: OpcuaApplicationTests.kt
docs/: 20241122_research.html  20241122_research.md  20241125_research_YH.html  20241125_research_YH.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/api/ac/: constants.ts
frontend/src/app/api/ac/power/: route.ts
frontend/src/app/api/ac/status/: route.ts
frontend/src/app/api/ac/temperature/: route.ts
frontend/src/components/: ACControlPanel.tsx
opcua/: client.py  server.py  simpleClient.py  simpleServer.py
