[tool.poetry]
name = "opcua"
version = "0.1.0"
description = ""
authors = ["clorose <gohan9511@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asyncua = "^1.1.5"
pyqt5 = "^5.15.11"
qasync = "^0.27.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
